--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.13.0",
+    "loading": "^1.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
+    "react-loading": "^2.0.3",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
