--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c4a.dev",
+  "name": "Nota.dev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.13.0",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "loading": "^1.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
+    "react-i18next": "^14.1.2",
     "react-loading": "^2.0.3",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
