--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.12",
     "firebase": "^9.13.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
